# ib-async-trader

./: README.md  pyproject.toml  requirements.txt
src/ib_async_trader/: __init__.py  broker.py  data.py  engine.py  strategy.py
src/ib_async_trader/brokers/: backtest_broker.py  ib_live_trade_broker.py
src/ib_async_trader/datas/: data_file.py  data_stream.py
src/ib_async_trader/engines/: backtest_engine.py  ib_live_trade_engine.py
src/ib_async_trader/utils/: black_scholes.py  chart_utils.py
tests/: sample_es_data.csv  test_backtest_engine.py
