[build-system]
requires = ["setuptools>=62.6"]
build-backend = "setuptools.build_meta"

[project]
name = "ib_async_trader"
version = "0.0.1"
authors = [
  { name="Jack Rochester", email="jackroc97@gmail.com" },
]
description = "A python library for backtesting and running live strategies using ib_async."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[tool.setuptools.dynamic]
dependencies = [
  "eventkit==1.0.3",
  "ib_async==1.0.3",
  "iniconfig==2.0.0",
  "nest-asyncio==1.6.0",
  "numpy==2.1.2",
  "packaging==24.1",
  "pandas==2.2.3",
  "pluggy==1.5.0",
  "pytest==8.3.3",
  "python-dateutil==2.9.0.post0",
  "pytz==2024.2",
  "scipy==1.14.1",
  "six==1.16.0",
  "tzdata==2024.2"
]